# gaussian_splat_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
app/: test_ply_loader.cpp  test_render_model_3d.cpp
config/: tum_fr1_desk.yaml
src/database/: Camera.cpp  Camera.h  GaussianModel.cpp  GaussianModel.h
src/renderer/: GaussianRasterizer.cpp  GaussianRasterizer.h
src/util/: JSONUtils.cpp  JSONUtils.h  PLYUtils.cpp  PLYUtils.h
src/viewer/: GaussianViewer.cpp  GaussianViewer.h
